# swd-forensic-extractor

./: .README.md.swp  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.github/workflows/: build.yml
include/platform/: board_config.h  platform_init.h
linker/: memmap.ld
research/: README.md
research/linker/: memmap.ld
research/src/: start.s
src/: boot2_final.S  boot2_w25q080.S  main.c  start.s
src/platform/: platform_init.c
tools/: maker.py  test_uart.py  uf2families.json
