cmake_minimum_required(VERSION 3.13)

include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)

project(p1_forensic_probe C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

pico_sdk_init()

add_compile_options(
    -Wall
    -Wextra
    -ffunction-sections
    -fdata-sections
)

set(FIRMWARE_SOURCES
    src/main.c
    src/platform/platform_init.c
    src/transport/usb_transport.c
    src/transport/usb_descriptors.c
)

add_executable(p1_forensic_probe ${FIRMWARE_SOURCES})

target_include_directories(p1_forensic_probe PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(p1_forensic_probe
    pico_stdlib
    hardware_gpio
    pico_multicore
    tinyusb_device
    tinyusb_board
)

pico_enable_stdio_uart(p1_forensic_probe 0)
pico_enable_stdio_usb(p1_forensic_probe 0)

pico_add_extra_outputs(p1_forensic_probe)